--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
 
 <body>
     <toaster-container toaster-options="{'close-button': true}"></toaster-container>
-    <script src="./lib/socket.io-client/dist/socket.io.js"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/md5.js"></script>
     <script src="https://use.fontawesome.com/cc053a962c.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
